--- a/templates/index.html
+++ b/templates/index.html
@@ -54,31 +54,5 @@
     }
     input {
       width: 100%;
-      padding: 12px;
-      margin: 10px 0;
-      border: none;
-      border-radius: 5px;
-      font-size: 15px;
-    }
-    .login-btn {
-      background-color: #f02c56;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      width: 100%;
-      padding: 12px;
-      font-size: 16px;
-      cursor: pointer;
-      margin-top: 10px;
-    }
-    .login-btn:hover {
-      background-color: #d01c46;
-    }
-    .footer {
-      font-size: 12px;
-      color: #aaa;
-      text-align: center;
-      margin-top: 30px;
-      max-width: 400px;
-    }
-    .footer a
+      padding
+
